--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>SPCSS Demo</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="sp.css">
+  <link rel="stylesheet" href="css/crisp.css">
 </head>
 <body>
 <h1>SPCSS Demo</h1>
