--- a/index.html
+++ b/index.html
@@ -190,6 +190,18 @@ hello, world&lt;/samp&gt;
   heading of this page does not have an empty anchor element, so it is
   rendered as a plain heading without an anchor link.
 </p>
+<h2 id="form">Table<a href="#form"></a></h2>
+<p>
+  This section shows an example of an HTML table.
+</p>
+<form>
+  <input type="text">
+  <select><option>Option #1</option><option>Option #2</option></select>
+  <textarea></textarea>
+  <div align="right">
+    <button>Button</button>
+  </div>
+</form>
 <h2 id="more">More<a href="#more"></a></h2>
 <p>
   Apart from the features described above, SPCSS has the following
