--- a/index.html
+++ b/index.html
@@ -190,7 +190,15 @@ hello, world&lt;/samp&gt;
   heading of this page does not have an empty anchor element, so it is
   rendered as a plain heading without an anchor link.
 </p>
-<h2 id="form">Table<a href="#form"></a></h2>
+<h2 id="section">Section<a href="#section"></a></h2>
+<section>
+  When you hover your cursor (mouse pointer) on the section heading
+  above, a hash sign appears to its right. This is a heading anchor
+  link. Heading anchor links are useful for sharing direct links to
+  sections of a web page.
+</section>
+
+<h2 id="form">Form<a href="#form"></a></h2>
 <p>
   This section shows an example of an HTML table.
 </p>
