--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ hello, world&lt;/samp&gt;
   much horizontal and vertical space a certain amount of code consumes:
 </p>
 <pre>
-<code>1---5---10---15---20---25---30---35---40---45---50---55---60---65---70---75---80---85---90---95--100--105--110--115--120--125--130--135--140--145--150--155--160--165--170--175--180--185--190--195--200--205--210--215--220--225--230--235--240--245--250--255--260--265--270--275--280--285--290--295--300
+<code>1----5----10---15---20---25---30---35---40---45---50---55---60---65---70---75---80---85---90---95--100--105--110--115--120--125--130--135--140--145--150--155--160--165--170--175--180--185--190--195--200--205--210--215--220--225--230--235--240--245--250--255--260--265--270--275--280--285--290--295--300
 2
 3
 4
@@ -207,7 +207,7 @@ hello, world&lt;/samp&gt;
   <select><option>Option #1</option><option>Option #2</option></select>
   <textarea></textarea>
   <div align="right">
-    <button>Button</button>
+    <button type="button">Button</button>
   </div>
 </form>
 <h2 id="more">More<a href="#more"></a></h2>
